tests/negative/symbols/lowercase_type.orng
// lowercase_type.orng:5:9: error: symbol `int` must start with an uppercase letter
// type int = (Int, Int)
//        ^
// 
type int = (Int, Int)

fn main() -> Int {
    let x: int = (3, 4)
    x[0]
}